adding the footer

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -43,4 +43,5 @@ Each browser apply their own property*/
 @import "components/bg-video";
 @import "components/card";
 @import "layout/header";
+@import "layout/footer";
 @import "layout/grid";
