--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     background-color: $color-white;
-    padding: 2rem 0;
+    //padding: 2rem 0;
     font-size: 1.4rem;
     &__logo-box {
         text-align: center;
