--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -33,6 +33,7 @@
 
 .section-book {
     padding: 15rem 0;
+    clip-path: polygon(0 0, 100% 0, 100% 75rem, 0 100%);
     background-image: linear-gradient(45deg, $color-blue, $color-dark-blue);
 }
 
