--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 //variables
 $color-dark-blue:#005799;
+$color-dark-blue2:#03497e;
 $color-blue: #057fa8;
+$color-blue2: #0294c4;
 $color-text: #333;
 $color-light-gray:#e5e5e5;
 $color-gray:#3c5463;
