--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,3 +45,4 @@ Each browser apply their own property*/
 @import "layout/header";
 @import "layout/footer";
 @import "layout/grid";
+@import "layout/navigation";
