--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,8 +5,11 @@
     background-size: cover;
     background-position: center;
     /*clip a part of the hero picture*/
-    clip-path: polygon(0 0, 100% 0, 100% 70rem, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
     position: relative;
+    @include respond(phone) {
+        clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+    }
     &__logo-box {
         position: absolute;
         left: 2rem;
@@ -16,10 +19,7 @@
         animation: moveInLeft .9s ease-in;
     }
     &__text-box {
-        position: absolute;
-        top: 45%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include absCenter2;
         /*in relation to the element*/
         text-align: center;
     }
