--- a/sass/abstracts/_mixin.scss
+++ b/sass/abstracts/_mixin.scss
@@ -5,3 +5,71 @@
         clear: both;
     }
 }
+
+//reuse this if you want to place in the center of the page
+@mixin absCenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@mixin absRight {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+@mixin absCenter2 {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+/*
+
+BREAK POINTS
+0-600px :phone
+600-900:tablet
+900-1200:tablet landsape
+1800+ :big screens
+
+*/
+
+//phone
+//tab-port
+//tab-land
+//big-desktop
+@mixin respond($breakpoint) {
+    @if $breakpoint==phone {
+        @media(max-width: 37.5em) {
+            //600px
+            @content
+        }
+        ;
+    }
+    @if $breakpoint==tab-port {
+        @media(max-width: 56.25em) {
+            //900px
+            @content
+        }
+        ;
+    }
+    @if $breakpoint==tab-land {
+        @media(max-width: 75em) {
+            //1200px
+            @content
+        }
+        ;
+    }
+    @if $breakpoint==big-desktop {
+        @media(min-width: 112.5em) {
+            ///1800px
+            @content
+        }
+        ;
+    }
+}
