--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,8 +14,10 @@ $color-light-green:#b8e1c8;
 $color-white: white;
 $color-black:black;
 //grid
-$grid-with: 114rem;
+$grid-width: 114rem;
+$grid-width-small: 60rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
 //fontsize
 $font-size-main: 1.6rem;
