--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,6 +10,18 @@
 html {
     font-size: 62.5%;
     /*1rem=10px*/
+    @include respond(tab-land) {
+        font-size: 56.25%;
+    }
+    @include respond(tab-port) {
+        font-size: 50%;
+    }
+    @include respond(phone) {
+        font-size: 40%;
+    }
+    @include respond(big-desktop) {
+        font-size: 75%;
+    }
 }
 
 
@@ -17,4 +29,14 @@ html {
 
 body {
     box-sizing: border-box;
+    padding: 3rem;
+    @include respond(tab-land) {
+        padding: 1.5rem;
+    }
+    @include respond(tab-port) {
+        padding: 1.5rem;
+    }
+    @include respond(phone) {
+        padding: 0;
+    }
 }
