--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,6 @@ body {
     font-size: $font-size-main;
     line-height: 1.7;
     color: #333;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -24,6 +23,10 @@ body {
         /*animation-iteration-count: 3;*/
         animation-timing-function: ease-out;
         font-family: 'Open Sans', sans-serif;
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 4rem;
+        }
     }
     &--sub {
         display: blocK;
@@ -31,6 +34,10 @@ body {
         font-weight: 400;
         letter-spacing: .6rem;
         animation: moveInButton 1.5s .3s ease-in;
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 4rem;
+        }
     }
 }
 
@@ -45,6 +52,12 @@ body {
     -webkit-background-clip: text;
     color: transparent;
     transition: all .2sec;
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
     &:hover {
         transform: skewY(2deg) skewX(4deg) scale(1.1);
         text-shadow: .5rem 1rem 1rem rgba($color-black, .2);
