--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -8,18 +8,38 @@
         z-index: 5;
         transition: all .2s;
         outline-offset: 2rem; //give space between img and border
+        @include respond(tab-port) {
+            float: left;
+            position: relative;
+            width: 80%;
+            box-shadow: 0 2.5rem 4rem rgba($color-dark-blue, .2);
+        }
+        @include respond(phone) {
+            width: 60%;
+        }
         &--p1 {
             left: 0;
             top: -2rem;
+            @include respond(tab-port) {
+                top: 0;
+            }
         }
         &--p2 {
             left: 25rem;
             top: 2rem;
+            @include respond(tab-port) {
+                left: 10rem;
+                top: -5rem;
+            }
         }
         //why % doens't work. it doens't scale
         &--p3 {
             left: 5rem;
             top: 10rem;
+            @include respond(tab-port) {
+                left: 5rem;
+                top: -10rem;
+            }
         }
         &:hover {
             outline: 1.5rem solid $color-blue;
