--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,10 @@
     background-color: $color-white;
     //padding: 2rem 0;
     font-size: 1.4rem;
+    @include respond(tab-port) {
+        padding: 6rem 0;
+        ;
+    }
     &__logo-box {
         text-align: center;
         margin-bottom: 2rem;
@@ -35,6 +39,11 @@
         &:not(:last-child) {
             margin-right: 2rem;
         }
+        @include respond(tab-port) {
+            align-items: center;
+            text-align: center;
+            float: none;
+        }
     }
     &__copyright {
         color: &color-text;
@@ -47,6 +56,11 @@
                 color: $color-pink;
                 transform: scale(1.1);
             }
+        }
+        @include respond(tab-port) {
+            align-items: center;
+            text-align: center;
+            float: none;
         }
     }
 }
