--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,6 +42,7 @@ Each browser apply their own property*/
 @import "components/feature-box";
 @import "components/bg-video";
 @import "components/card";
+@import "components/popup";
 @import "layout/header";
 @import "layout/footer";
 @import "layout/grid";
